# dk-relay

./: .gitignore  Cargo.toml
src/: cli.rs  ftd2.rs  ftdi1.rs  lib.rs  main.rs  relay.rs  test_trait.rs
src/relay/: basic.rs  mod.rs  tests.rs
src/relay/ops8bit/: mod.rs  tests.rs
