[package]
name = "dk-relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }

[features]
all = ["ftdi", "ftd2", "vendored"]
ftdi = ["dep:ftdi"]
ftd2 = ["dep:libftd2xx"]
vendored = ["ftdi?/vendored", "ftdi?/libusb1-sys", "libftd2xx?/static"]

[dependencies.libftd2xx]
version = "0.32"
optional = true

[dependencies.ftdi]
git = "https://github.com/boon-code/ftdi-fork.git"
branch = "add-detach-mode"
optional = true
